Python fails on startup with UnicodeDecodeError #40766

Closed
opened 2014-06-23 08:29:02 +02:00 by Tony Mullen · 14 comments

Python fails on startup with error: UnicodeDecodeError: 'mbcs' codec can't decode bytes in position 0--1: No mapping for the Unicode character exists in the target code page.

Japanese Windows 8, Vaio Ultrabook.

Problem occurs in recent builds up through Jun 19, (b49e6d0) going back as far as 2.63a (2.62 and previous versions do not have this problem with Python failing, however Blender itself crashes on startup in those versions if there are Japanese characters in the path to the Blender install directory).

I have tested with the Blender install directory placed directly under C:\ to ensure that there are no Japanese characters in the path to Blender.

Screenshot of Traceback on startup:

blenderscreenshot.PNG

Python fails on startup with error: UnicodeDecodeError: 'mbcs' codec can't decode bytes in position 0--1: No mapping for the Unicode character exists in the target code page. Japanese Windows 8, Vaio Ultrabook. Problem occurs in recent builds up through Jun 19, (b49e6d0) going back as far as 2.63a (2.62 and previous versions do not have this problem with Python failing, however Blender itself crashes on startup in those versions if there are Japanese characters in the path to the Blender install directory). I have tested with the Blender install directory placed directly under C:\ to ensure that there are no Japanese characters in the path to Blender. Screenshot of Traceback on startup: ![blenderscreenshot.PNG](https://archive.blender.org/developer/F95322/blenderscreenshot.PNG)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @TonyMullen

Added subscriber: @TonyMullen

Added subscribers: @kjym3, @ideasman42

Added subscribers: @kjym3, @ideasman42

@TonyMullen
Thank you for the problem report. Could you please confirm that the name of the Windows user running Blender contains Japanese characters?

I guess the USERPROFILE environmental variable is in the form C:\Users<username> where contains Japanese characters (FYI, start the Command Prompt, type set and look for USERPROFILE).

@TonyMullen Thank you for the problem report. Could you please confirm that the name of the Windows user running Blender contains Japanese characters? I guess the USERPROFILE environmental variable is in the form C:\Users\<username> where <username> contains Japanese characters (FYI, start the Command Prompt, type `set` and look for `USERPROFILE`).
Author

Yes, the username is システム.

Yes, the username is システム.
Author

I tested with a non-Japanese character username, and this solves the problem.

I tested with a non-Japanese character username, and this solves the problem.

Added subscriber: @mont29

Added subscriber: @mont29

@TonyMullen
Thanks for the confirmation. If you build Blender from source, applying D604 should solve the issue with Japanese user names.

@TonyMullen Thanks for the confirmation. If you build Blender from source, applying [D604](https://archive.blender.org/developer/D604) should solve the issue with Japanese user names.
Author

Thanks!

Thanks!
Campbell Barton was assigned by Sergey Sharybin 2014-07-21 17:35:35 +02:00

Added subscriber: @Sergey

Added subscriber: @Sergey

@ideasman42, afraid this one goes to you. It touches all this python integration and so, you're the most familiar with this area anyway ;)

@ideasman42, afraid this one goes to you. It touches all this python integration and so, you're the most familiar with this area anyway ;)

This issue was referenced by d4599ff001

This issue was referenced by d4599ff00137ccbbcab5cb0e20d9b0bdbc47588e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit d4599ff001.

Closed by commit d4599ff001.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40766
No description provided.