Fix T40766: Startup fails with UnicodeDecodeError on Windows